k8s/workloads/filebrowser/manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filebrowser
  labels:
    app: filebrowser
spec:
  replicas: 1
  selector:
    matchLabels:
      app: filebrowser
  template:
    metadata:
      labels:
        app: filebrowser
    spec:
      nodeSelector:
        platform.io/type: pi
      securityContext:
        fsGroup: 1000
      containers:
        - name: filebrowser
          image: gtstef/filebrowser:stable
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: data
              mountPath: /srv
            # Previous filebrowser config
            - name: db
              mountPath: /database
            - name: db
              mountPath: /config
            # Current filebrwoser quantum config
            - name: db
              mountPath: /home/filebrowser/data/
            - name: config
              mountPath: /home/filebrowser/data/config.yaml
              subPath: config.yaml
            - name: cloud
              mountPath: /srv/cloud
            - name: sync
              mountPath: /srv/sync
            - name: media
              mountPath: /srv/media
            - name: paperless
              mountPath: /srv/paperless
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data-pvc
        - name: cloud
          persistentVolumeClaim:
            claimName: cloud-pvc
        - name: db
          persistentVolumeClaim:
            claimName: db-pvc
        - name: sync
          persistentVolumeClaim:
            claimName: sync-pvc
        - name: media
          persistentVolumeClaim:
            claimName: media-pvc
        - name: paperless
          persistentVolumeClaim:
            claimName: paperless-pvc
        - name: config
          configMap:
            name: config
            items:
              - key: config.yaml
                path: config.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: filebrowser
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: filebrowser
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: filebrowser

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`filebrowser.remini.site`)
      kind: Rule
      services:
        - name: filebrowser
          port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: filebrowser-ts
  annotations:
    tailscale.com/hostname: filebrowser
spec:
  ingressClassName: tailscale
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: filebrowser
                port:
                  number: 80
  tls:
    - hosts:
        - filebrowser
# ---
# apiVersion: v1
# kind: Service
# metadata:

#   name: filebrowser-lb
# spec:
#   type: LoadBalancer
#   ports:
#     - port: 9050
#       targetPort: 80
#   selector:
#     app: filebrowser
